archive fs + world file header format changed